--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
-    <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="styles/main.css" />
+    <!--<link rel="stylesheet" href="styles/main.scss" />-->
     <title>Svensk boilerplate med Parcel och Npm</title>
+    <script src="scripts/index.js" defer></script>
   </head>
   <body></body>
 </html>
