--- a/src/gallery.html
+++ b/src/gallery.html
@@ -99,10 +99,11 @@
           <p>Villkor</p>
         </div>
         <div class="footer-section">
-          <h3>Navigering</h3>
-          <p>Start</p>
+          <h2>Navigering</h2>
+          <p>Hem</p>
+          <p>Galleri</p>
+          <p>Process</p>
           <p>Produkter</p>
-          <p>Kontakt</p>
         </div>
         <div class="footer-section social-media">
           <h3>Följ oss</h3>
