--- a/src/index.html
+++ b/src/index.html
@@ -121,9 +121,10 @@
         </div>
         <div class="footer-section">
           <h2>Navigering</h2>
-          <p>Start</p>
+          <p>Hem</p>
+          <p>Galleri</p>
+          <p>Process</p>
           <p>Produkter</p>
-          <p>Kontakt</p>
         </div>
         <div class="footer-section social-media">
           <h2>Följ oss</h2>
