--- a/src/index.html
+++ b/src/index.html
@@ -66,8 +66,8 @@
               <strong>Galleri</strong> En sida som visar optimerade fotografier
             </li>
             <li>
-              <strong>Publiceringssida</strong> Dokumentation av den skapade
-              utvecklings- och publiceringsprocessen
+              <strong>Process</strong> Dokumentation av den skapade utvecklings-
+              och publiceringsprocessen
             </li>
             <li>
               <strong>Tom undermeny för eventuella "produktsidor"</strong>
@@ -94,9 +94,25 @@
             GitHub har hanterat versionskontroll och publicering.
           </p>
           <p>
+            Dessa tekniker och verktyg har sedan sammanställts i en
+            återanvändbar mall, även kallad en boilerplate. Medvetet har varje
+            responsiv layout på webbplatsen fått en egen bakgrundsfärg för att
+            tydligt indikera de olika brytpunkterna. Detta hjälper till att
+            visualisera och förstå de responsiva stegen under utvecklingen av en
+            webbplats. Naturligtvis är det meningen att färgerna ska anpassas
+            efter behov.
+          </p>
+          <p>
             För en detaljerad genomgång av arbetsprocessen och de verktyg som
             används, besök sidan <strong>"Process"</strong>.
           </p>
+          <ul>
+            <li>Allmän information om boilerplate</li>
+            <li>Förberedelser</li>
+            <li>Arbetsprocess och automatisering</li>
+            <li>Automatisering med Parcel</li>
+            <li>Kommande steg</li>
+          </ul>
         </section>
       </main>
       <footer class="footer">
@@ -130,7 +146,11 @@
           <h2>Följ oss</h2>
           <div class="social-icons">
             <div class="social-icon">
-              <a href="https://www.facebook.com" target="_blank">
+              <a
+                href="https://www.facebook.com"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
                 <img src="images/facebook.svg" alt="Facebook" class="normal" />
                 <img
                   src="images/facebook_hover.svg"
@@ -140,7 +160,11 @@
               </a>
             </div>
             <div class="social-icon">
-              <a href="https://www.instagram.com" target="_blank">
+              <a
+                href="https://www.instagram.com"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
                 <img
                   src="images/instagram.svg"
                   alt="Instagram"
@@ -154,13 +178,21 @@
               </a>
             </div>
             <div class="social-icon">
-              <a href="https://x.com/" target="_blank">
+              <a
+                href="https://x.com/"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
                 <img src="images/x.svg" alt="X" class="normal" />
                 <img src="images/x_hover.svg" alt="X Hover" class="hover" />
               </a>
             </div>
             <div class="social-icon larger">
-              <a href="https://www.linkedin.com" target="_blank">
+              <a
+                href="https://www.linkedin.com"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
                 <img src="images/linkedin.svg" alt="LinkedIn" class="normal" />
                 <img
                   src="images/linkedin_hover.svg"
@@ -170,7 +202,11 @@
               </a>
             </div>
             <div class="social-icon largest">
-              <a href="https://www.youtube.com" target="_blank">
+              <a
+                href="https://www.youtube.com"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
                 <img src="images/youtube.svg" alt="YouTube" class="normal" />
                 <img
                   src="images/youtube_hover.svg"
@@ -180,7 +216,11 @@
               </a>
             </div>
             <div class="social-icon larger">
-              <a href="https://www.pinterest.com" target="_blank">
+              <a
+                href="https://www.pinterest.com"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
                 <img
                   src="images/pinterest.svg"
                   alt="Pinterest"
@@ -194,7 +234,11 @@
               </a>
             </div>
             <div class="social-icon larger">
-              <a href="https://www.tiktok.com" target="_blank">
+              <a
+                href="https://www.tiktok.com"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
                 <img src="images/tiktok.svg" alt="TikTok" class="normal" />
                 <img
                   src="images/tiktok_hover.svg"
