Adjusted css för nav and added Images page

--- a/src/images.html
+++ b/src/images.html
@@ -26,8 +26,8 @@
         <nav class="nav">
           <ul class="menu-items">
             <li><a href="index.html">Hem</a></li>
-            <li><a href="images.html">Bilder</a></li>
-            <li><a href="#">Galleri</a></li>
+            <li><a href="#">Bilder</a></li>
+            <li><a href="gallery.html">Galleri</a></li>
             <li><a href="process.html">Process</a></li>
             <li class="dropdown">
               <a href="#products"> <span class="arrow"></span> Produkter </a>
