--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
         <nav class="nav">
           <ul class="menu-items">
             <li><a href="#">Hem</a></li>
+            <li><a href="images.html">Bilder</a></li>
             <li><a href="gallery.html">Galleri</a></li>
             <li><a href="process.html">Process</a></li>
             <li class="dropdown">
@@ -138,6 +139,7 @@
         <div class="footer-section">
           <h2>Navigering</h2>
           <p>Hem</p>
+          <p>Bilder</p>
           <p>Galleri</p>
           <p>Process</p>
           <p>Produkter</p>
