Dropdown menu adjusted och images added

--- a/src/images.html
+++ b/src/images.html
@@ -41,45 +41,13 @@
         </nav>
       </header>
       <main>
-        <div class="gallery">
-          <div class="gallery-item item-1">
-            <img src="https://picsum.photos/300/200?random=1" alt="Photo 1" />
-          </div>
-          <div class="gallery-item item-2">
-            <img src="https://picsum.photos/300/200?random=2" alt="Photo 2" />
-          </div>
-          <div class="gallery-item item-3">
-            <img src="https://picsum.photos/300/200?random=3" alt="Photo 3" />
-          </div>
-          <div class="gallery-item item-4">
-            <img src="https://picsum.photos/300/200?random=4" alt="Photo 4" />
-          </div>
-          <div class="gallery-item item-5">
-            <img src="https://picsum.photos/300/200?random=5" alt="Photo 5" />
-          </div>
-          <div class="gallery-item item-6">
-            <img src="https://picsum.photos/300/200?random=6" alt="Photo 6" />
-          </div>
-          <div class="gallery-item item-7">
-            <img src="https://picsum.photos/300/200?random=7" alt="Photo 7" />
-          </div>
-          <div class="gallery-item item-8">
-            <img src="https://picsum.photos/300/200?random=8" alt="Photo 8" />
-          </div>
-          <div class="gallery-item item-9">
-            <img src="https://picsum.photos/300/200?random=9" alt="Photo 9" />
-          </div>
-        </div>
-
-        <!-- Modal -->
-        <div class="modal">
-          <div class="modal-content">
-            <img
-              src="https://picsum.photos/300/200?random=9"
-              alt="Enlarged Photo"
-              class="modal-image"
-            />
-          </div>
+        <div class="image-container">
+          <img src="images/image1.jpg" alt="Bild 1" />
+          <img src="images/image2.jpg" alt="Bild 2" />
+          <img src="images/image3.jpg" alt="Bild 3" />
+          <img src="images/image4.jpg" alt="Bild 4" />
+          <img src="images/image5.jpg" alt="Bild 5" />
+          <img src="images/image6.jpg" alt="Bild 6" />
         </div>
       </main>
       <footer class="footer">
