--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         </nav>
       </header>
       <main>
-        <section>
+        <section class="text-container">
           <h1>Frontend-baserad webbutveckling</h1>
           <h2>Automatisering och publicering</h2>
           <p>
@@ -56,7 +56,7 @@
           </p>
         </section>
 
-        <section>
+        <section class="text-container">
           <h2>Webbplatsens innehåll</h2>
           <ul>
             <li>
@@ -64,7 +64,10 @@
               uppgiften
             </li>
             <li>
-              <strong>Galleri</strong> En sida som visar optimerade fotografier
+              <strong>Bilder</strong> En sida som visar optimerade fotografier
+            </li>
+            <li>
+              <strong>Galleri</strong> En sida som visar ett dummy-galleri
             </li>
             <li>
               <strong>Process</strong> Dokumentation av den skapade utvecklings-
@@ -76,8 +79,8 @@
             </li>
             <li>
               <strong>Logotyp och webbplatsnamn</strong> Webbplatsen använder en
-              generisk SVG-logotyp som säger <em>"Add a logo"</em> och ett
-              placeholder-namn <em>"CompanyName"</em>.
+              generisk SVG-logotyp som säger <em>Add a logo</em> och ett
+              placeholder-namn <em>CompanyName</em>.
             </li>
             <li>
               <strong>Footer</strong> Dummy-footer med förberedelser för
@@ -86,7 +89,7 @@
           </ul>
         </section>
 
-        <section>
+        <section class="text-container">
           <h2>Teknik och arbetsprocess</h2>
           <p>Webbplatsen är skapad med HTML, CSS och JavaScript.</p>
           <p>
@@ -105,7 +108,10 @@
           </p>
           <p>
             För en detaljerad genomgång av arbetsprocessen och de verktyg som
-            används, besök sidan <strong>"Process"</strong>.
+            används, besök sidan
+            <a href="process.html" rel="noopener noreferrer" target="_blank">
+              Process</a
+            >.
           </p>
           <ul>
             <li>Allmän information om boilerplate</li>
