Parcel boilerplate ready for now

--- a/src/images.html
+++ b/src/images.html
@@ -42,12 +42,65 @@
       </header>
       <main>
         <div class="image-container">
-          <img src="images/image1.jpg" alt="Bild 1" />
-          <img src="images/image2.jpg" alt="Bild 2" />
-          <img src="images/image3.jpg" alt="Bild 3" />
-          <img src="images/image4.jpg" alt="Bild 4" />
-          <img src="images/image5.jpg" alt="Bild 5" />
-          <img src="images/image6.jpg" alt="Bild 6" />
+          <picture>
+            <source srcset="images/image1.webp" type="image/webp" />
+            <img
+              src="images/image1.jpg"
+              alt="Bild 1"
+              width="500"
+              height="500"
+            />
+          </picture>
+
+          <picture>
+            <source srcset="images/image2.webp" type="image/webp" />
+            <img
+              src="images/image2.jpg"
+              alt="Bild 2"
+              width="500"
+              height="500"
+            />
+          </picture>
+
+          <picture>
+            <source srcset="images/image3.webp" type="image/webp" />
+            <img
+              src="images/image3.jpg"
+              alt="Bild 3"
+              width="500"
+              height="500"
+            />
+          </picture>
+
+          <picture>
+            <source srcset="images/image4.webp" type="image/webp" />
+            <img
+              src="images/image4.jpg"
+              alt="Bild 4"
+              width="500"
+              height="500"
+            />
+          </picture>
+
+          <picture>
+            <source srcset="images/image5.webp" type="image/webp" />
+            <img
+              src="images/image5.jpg"
+              alt="Bild 5"
+              width="500"
+              height="500"
+            />
+          </picture>
+
+          <picture>
+            <source srcset="images/image6.webp" type="image/webp" />
+            <img
+              src="images/image6.jpg"
+              alt="Bild 6"
+              width="500"
+              height="500"
+            />
+          </picture>
         </div>
       </main>
       <footer class="footer">
