Generic favicon link nel header Empty favicon in folder structure as reminder

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/nav.css" />
     <link rel="stylesheet" href="styles/footer.css" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"
+    />
     <!--<link rel="stylesheet" href="styles/main.scss" />-->
     <title>Svensk boilerplate med Parcel och Npm</title>
     <script src="scripts/index.js" type="module"></script>
