added netlify toml file, convert-to-webp.js file to Process instruction

--- a/src/process.html
+++ b/src/process.html
@@ -234,7 +234,9 @@
                 │   ├── 🔑.env
                 │   │   (tillagd i .gitignore)
                 │   ├── 🔑.env.example
-                │   ├── 🗒.gitignore
+                │   ├── 🔄.gitignore
+                │   ├── 🗒 convert-to-webp.js
+                │   ├── 🗒 netlify.toml
                 │   ├── 🔄package-lock.json
                 │   ├── 🔄package.json
                 │   ├── 📄readme.md
