Process instructions updated

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="sv">
   <head>
     <meta charset="UTF-8" />
@@ -119,9 +119,11 @@
           </p>
           <ul>
             <li>Allmän information om boilerplate</li>
-            <li>Förberedelser</li>
-            <li>Arbetsprocess och automatisering</li>
+            <li>Arbetsprocess</li>
+            <li>Förberedelser för att skapa en Parcel boilerplate</li>
+            <li>Automatisering</li>
             <li>Automatisering med Parcel</li>
+            <li>Netlify-specifik aktivitet</li>
             <li>Kommande steg</li>
           </ul>
         </section>
