--- a/src/process.html
+++ b/src/process.html
@@ -598,7 +598,7 @@
           </ul>
         </section>
         <section>
-          <h2>Netlify-spedifik aktivitet</h2>
+          <h2>Netlify-specifik aktivitet</h2>
           <p>
             Netlify spelar en viktig roll i automatiseringen och publiceringen
             av ditt projekt. Här är en detaljerad genomgång av vad
