--- a/src/process.html
+++ b/src/process.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/footer.css" />
     <link
       rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"
+      href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20100%20100'%3E%3Ctext%20y='.9em'%20font-size='90'%3E%F0%9F%8C%90%3C/text%3E%3C/svg%3E"
     />
     <!--<link rel="stylesheet" href="styles/main.scss" />-->
     <title>Svensk boilerplate med Parcel och Npm</title>
